--- a/GymMembership/GymMembership/HomePage/index.html
+++ b/GymMembership/GymMembership/HomePage/index.html
@@ -35,10 +35,19 @@
             </li>
             <li>
                 <div class="dropdown">
-                    <a class="dropbtn" href="../MemberSubscriptions/memberSubscriptions.html">Member Subscriptions</a>
+                    <a class="dropbtn" href="../MemberSubscriptions/memberSubscriptions.html">Subscribers</a>
                     <div class="dropdown-content">
-                        <a href="../MemberSubscriptions/memberSubscriptions.html">View Member Subscriptions</a>
-                        <a href="../MemberSubscriptions/register_memberSubsciptions.html">Register Member Subscription</a>
+                        <a href="../MemberSubscriptions/memberSubscriptions.html">View Subscribers</a>
+                        <a href="../MemberSubscriptions/register_memberSubsciptions.html">Register Subscriber</a>
+                    </div>
+                </div>
+            </li>
+            <li>
+                <div class="dropdown">
+                    <a class="dropbtn" href="../Discounts/discounts.html">Discounts</a>
+                    <div class="dropdown-content">
+                        <a href="../Discounts/discounts.html">View Discounts</a>
+                        <a href="../Discounts/register_discounts.html">Register Discount</a>
                     </div>
                 </div>
             </li>
