--- a/GymMembership/GymMembership/Members/members.html
+++ b/GymMembership/GymMembership/Members/members.html
@@ -59,7 +59,7 @@
         </div>
         <div class="header" id="header">
         <input type="search" id="input-filter" placeholder="Search Data....">
-        <button id="getMembersBtn">Load Data</button>
+        <button id="getMembersBtn">Search</button>
         </div>
         <div class="table" id="output">
 
