--- a/GymMembership/GymMembership/Subscriptions/subscriptions.html
+++ b/GymMembership/GymMembership/Subscriptions/subscriptions.html
@@ -59,7 +59,7 @@
         </div>
         <div class="header" id="header">
         <input type="search" id="input-filter" placeholder="Search Data....">
-        <button id="getSubscriptionsBtn">Load Data</button>
+        <button id="getSubscriptionsBtn">Search</button>
         </div>
         <div class="table" id="output">
         </div>
